--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "generate-api-spec": " tsoa spec",
+    "generate-api-routes": " tsoa routes"
   },
   "private": true,
   "dependencies": {
+    "@typegoose/typegoose": "^9.2.0",
+    "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "express": "4.17.1",
+    "mongoose": "^6.0.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
-    "tslib": "^2.0.0"
+    "swagger-ui-express": "^4.1.6",
+    "tsoa": "^3.14.0"
   },
   "devDependencies": {
     "@nrwl/cli": "13.1.3",
@@ -35,6 +41,7 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "babel-jest": "27.2.3",
@@ -49,6 +56,7 @@
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
+    "tslib": "^2.3.1",
     "typescript": "~4.3.5"
   }
 }
