--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "generate-api-spec": " tsoa spec",
-    "generate-api-routes": " tsoa routes"
+    "generate-api-spec": "tsoa spec",
+    "generate-api-routes": "tsoa routes",
+    "generate-openapi-client": "node ./tools/generators/openapi-client/openapi-client.js"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "react-dom": "17.0.2",
     "regenerator-runtime": "0.13.7",
     "swagger-ui-express": "^4.1.6",
+    "tslib": "^2.0.0",
     "tsoa": "^3.14.0"
   },
   "devDependencies": {
@@ -54,6 +56,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
+    "openapi-typescript-codegen": "^0.11.8",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.5",
     "tslib": "^2.3.1",
