--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@dooexid/api-client": ["libs/api-client/src/index.ts"],
       "@dooexid/api-interfaces": ["libs/api-interfaces/src/index.ts"]
     }
   },
