--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@types/express": "4.17.0",
     "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
+    "@types/node": "^16.11.6",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
     "@types/swagger-ui-express": "^4.1.3",
