--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@typegoose/typegoose": "^9.2.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "core-js": "^3.6.5",
     "express": "4.17.1",
